# lucidtask

./: README.md  alembic.ini  main.py  pyproject.toml
config/: __init__.py  dependencies.py  settings.py
database/: __init__.py
database/migrations/: env.py
database/migrations/versions/: c02cb3876a62_init.py
database/models/: post.py  user.py
exceptions/: __init__.py
routes/: __init__.py  accounts.py  posts.py
schemas/: accounts.py  post.py
services/: user_dependency.py  user_service.py
